removed silly assertion statements (ticket #12)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@8 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IApplication.cs" />
     <Compile Include="Interfaces\IControl.cs" />
     <Compile Include="Interfaces\IControlManager.cs" />
+    <Compile Include="InvalidPluginException.cs" />
     <Compile Include="PluginManager.cs" />
     <Compile Include="PluginManagerActionEventArgs.cs" />
     <Compile Include="DependencyAttribute.cs" />
