Worked on ticket #26 - modified project HeuristicLab.Core to automatically update the version string in a pre-build event using SubWCRev
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@25 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
+++ b/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
@@ -228,6 +228,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
@@ -341,4 +342,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>SubWCRev ..\..\ ..\..\Properties\AssemblyInfo.frame ..\..\Properties\AssemblyInfo.cs</PreBuildEvent>
+  </PropertyGroup>
 </Project>
