--- a/sources/HeuristicLab.Constraints/HeuristicLab.Constraints.csproj
+++ b/sources/HeuristicLab.Constraints/HeuristicLab.Constraints.csproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AllSubOperatorsTypeConstraintView.resx">
@@ -211,4 +212,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
