--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -192,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ArrayDataBaseView.resx">
@@ -259,4 +260,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
