--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FunctionView.resx">
@@ -120,4 +121,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
