--- a/sources/HeuristicLab.SGA/HeuristicLab.SGA.csproj
+++ b/sources/HeuristicLab.SGA/HeuristicLab.SGA.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SGAEditor.resx">
@@ -108,4 +109,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
