--- a/sources/HeuristicLab.OptimizationFrontend/HeuristicLab.OptimizationFrontend.csproj
+++ b/sources/HeuristicLab.OptimizationFrontend/HeuristicLab.OptimizationFrontend.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\HeuristicLab.ico" />
@@ -137,4 +138,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
