--- a/sources/HeuristicLab.Routing.TSP/HeuristicLab.Routing.TSP.csproj
+++ b/sources/HeuristicLab.Routing.TSP/HeuristicLab.Routing.TSP.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TSPTourView.resx">
@@ -117,4 +118,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
