--- a/sources/HeuristicLab.Grid/HeuristicLab.Grid.csproj
+++ b/sources/HeuristicLab.Grid/HeuristicLab.Grid.csproj
@@ -62,6 +62,7 @@
     <Compile Include="GridServer.cs" />
     <Compile Include="GridServerApplication.cs" />
     <Compile Include="HeuristicLabGridPlugin.cs" />
+    <Compile Include="IClient.cs" />
     <Compile Include="IEngineStore.cs" />
     <Compile Include="IGridServer.cs" />
     <Compile Include="ProcessingEngine.cs" />
