Worked on ticket #41 - moved specific classes ItemList and ItemListView into separate files
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@41 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -149,6 +149,10 @@
     </Compile>
     <Compile Include="IObjectData.cs" />
     <Compile Include="IObjectDataVisitor.cs" />
+    <Compile Include="ItemList.cs" />
+    <Compile Include="ItemListView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ItemListView_T.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -156,7 +160,6 @@
       <DependentUpon>ItemListView_T.cs</DependentUpon>
     </Compile>
     <Compile Include="ItemList_T.cs">
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="MatrixDataBaseView.cs">
       <SubType>UserControl</SubType>
