Closed ticket #46 - renamed MultiHeuristicBranch to StochasticMultiBranch - added description and license information
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@46 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
+++ b/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
@@ -57,7 +57,7 @@
     <Compile Include="ConditionalBranch.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MultiHeuristicBranch.cs" />
+    <Compile Include="StochasticMultiBranch.cs" />
     <Compile Include="SubScopesMixer.cs" />
     <Compile Include="DataCollector.cs" />
     <Compile Include="EqualToComparator.cs" />
