Worked on ticket #48 - merged changes from branch Modularization (r55:59) back into trunk again
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@61 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
+++ b/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ChooseTypeDialog.Designer.cs">
       <DependentUpon>ChooseTypeDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="AliasEventArgs.cs" />
     <Compile Include="OperatorBaseDescriptionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
