Worked on ticket #15 - added crossover and manipulation operators implemented by adoppelb
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@70 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -39,6 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AverageCrossover.cs" />
+    <Compile Include="CompleteAverageCrossover.cs" />
+    <Compile Include="DiscreteCrossover.cs" />
+    <Compile Include="HeuristicCrossover.cs" />
+    <Compile Include="RandomConvexCrossover.cs" />
+    <Compile Include="RandomLocalCrossover.cs" />
+    <Compile Include="UniformAllPositionsManipulator.cs" />
     <Compile Include="UniformRandomRealVectorGenerator.cs" />
     <Compile Include="UniformOnePositionManipulator.cs" />
     <Compile Include="RealVectorCrossoverBase.cs" />
