Worked on ticket #15 - renamed crossover operators for real vectors according to lecture slides of maffenze
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@74 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -39,12 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AverageCrossover.cs" />
-    <Compile Include="CompleteAverageCrossover.cs" />
+    <Compile Include="ContinuousCrossover.cs" />
+    <Compile Include="CompleteContinuousCrossover.cs" />
     <Compile Include="DiscreteCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
     <Compile Include="RandomConvexCrossover.cs" />
-    <Compile Include="RandomLocalCrossover.cs" />
+    <Compile Include="LocalCrossover.cs" />
     <Compile Include="UniformAllPositionsManipulator.cs" />
     <Compile Include="UniformRandomRealVectorGenerator.cs" />
     <Compile Include="UniformOnePositionManipulator.cs" />
