Fixed ticket #65 - added operator BoundsChecker
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@75 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ContinuousCrossover.cs" />
     <Compile Include="CompleteContinuousCrossover.cs" />
+    <Compile Include="BoundsChecker.cs" />
     <Compile Include="DiscreteCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
     <Compile Include="RandomConvexCrossover.cs" />
