Fixed ticket #70 - added new data element NullData for representing a null value - used NullData as value for the marker variable in CombinedOperator
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@82 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ConstrainedDoubleDataView.Designer.cs">
       <DependentUpon>ConstrainedDoubleDataView.cs</DependentUpon>
     </Compile>
+    <Compile Include="NullData.cs" />
     <Compile Include="IntMatrixDataView.cs">
       <SubType>UserControl</SubType>
     </Compile>
