Added two operators that can make use of different mutation strengths (by applying them repeatedly a number of times)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@83 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Permutation/HeuristicLab.Permutation.csproj
+++ b/sources/HeuristicLab.Permutation/HeuristicLab.Permutation.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Swap3Manipulator.cs" />
     <Compile Include="TranslocationInversionManipulator.cs" />
     <Compile Include="TranslocationManipulator.cs" />
+    <Compile Include="VariableStrengthInversionManipulator.cs" />
+    <Compile Include="VariableStrengthPermutationManipulatorBase.cs" />
+    <Compile Include="VariableStrengthSwap2Manipulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
