fixed ticket #73 - removed code duplicating operators in Permutation - added general VariableStrengthRepeatingManipulator
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@84 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
+++ b/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ESEditor.Designer.cs">
       <DependentUpon>ESEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="VariableStrengthRepeatingManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
