--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -219,6 +219,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConstrainedItemListView.resx">
       <DependentUpon>ConstrainedItemListView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="DoubleDataView.resx">
       <DependentUpon>DoubleDataView.cs</DependentUpon>
