--- a/sources/HeuristicLab.Permutation/HeuristicLab.Permutation.csproj
+++ b/sources/HeuristicLab.Permutation/HeuristicLab.Permutation.csproj
@@ -80,9 +80,6 @@
     <Compile Include="Swap3Manipulator.cs" />
     <Compile Include="TranslocationInversionManipulator.cs" />
     <Compile Include="TranslocationManipulator.cs" />
-    <Compile Include="VariableStrengthInversionManipulator.cs" />
-    <Compile Include="VariableStrengthPermutationManipulatorBase.cs" />
-    <Compile Include="VariableStrengthSwap2Manipulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
@@ -104,6 +101,10 @@
     <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Random\HeuristicLab.Random.csproj">
+      <Project>{47019A74-F7F7-482E-83AA-D3F4F777E879}</Project>
+      <Name>HeuristicLab.Random</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
