Added the possibility to use Recombination in ES (ticket #64) - Added ES-specific RandomSelector that creates lambda parent groups of non repeating parents - Added the two recombination types: discrete and intermediate for RealVector - Updated the ES UI
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@86 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
+++ b/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ES.cs" />
+    <Compile Include="ESRandomSelector.cs" />
     <Compile Include="HeuristicLabESPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ESEditor.cs">
