--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -44,8 +44,10 @@
     <Compile Include="BoundsChecker.cs" />
     <Compile Include="DiscreteCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
+    <Compile Include="IntermediateRecombination.cs" />
     <Compile Include="RandomConvexCrossover.cs" />
     <Compile Include="LocalCrossover.cs" />
+    <Compile Include="DiscreteRecombination.cs" />
     <Compile Include="UniformAllPositionsManipulator.cs" />
     <Compile Include="UniformRandomRealVectorGenerator.cs" />
     <Compile Include="UniformOnePositionManipulator.cs" />
