Moved abstract operator DelegatingOperator from StructureIdentification to Operators. And removed code duplication. See ticket #55.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@89 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
+++ b/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ConditionalBranch.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DelegatingOperator.cs" />
     <Compile Include="StochasticMultiBranch.cs" />
     <Compile Include="SubScopesMixer.cs" />
     <Compile Include="DataCollector.cs" />
