* added an attribute for the build time of an assembly.  * build-date is automatically updated via SubWCRev in the pre-build action.  * adapted PluginManager to correctly handle plugins with same version but newer build date
fixes ticket #39

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@91 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationInfo.cs" />
+    <Compile Include="AssemblyBuildDateAttribute.cs" />
     <Compile Include="BaseClasses\ApplicationBase.cs" />
     <Compile Include="BaseClasses\PluginBase.cs" />
     <Compile Include="ClassInfoAttribute.cs" />
