Added sigma self adaptive operators for RealVector problems
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@99 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
+++ b/sources/HeuristicLab.ES/HeuristicLab.ES.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>ESEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelfAdaptiveMutationStrengthAdjuster.cs" />
     <Compile Include="VariableStrengthRepeatingManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
