Added ScopeCleaner (closes ticket #80)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@100 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
+++ b/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
@@ -64,6 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DelegatingOperator.cs" />
+    <Compile Include="ScopeCleaner.cs" />
     <Compile Include="StochasticMultiBranch.cs" />
     <Compile Include="SubScopesMixer.cs" />
     <Compile Include="DataCollector.cs" />
