--- a/sources/HeuristicLab.Constraints/HeuristicLab.Constraints.csproj
+++ b/sources/HeuristicLab.Constraints/HeuristicLab.Constraints.csproj
@@ -202,6 +202,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VariableComparisonConstraintView.resx">
       <DependentUpon>VariableComparisonConstraintView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
