--- a/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
+++ b/sources/HeuristicLab.Operators/HeuristicLab.Operators.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <EmbeddedResource Include="AddVariableInfoDialog.resx">
       <DependentUpon>AddVariableInfoDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CombinedOperatorView.resx">
       <DependentUpon>CombinedOperatorView.cs</DependentUpon>
