Closed ticket #81 - added additional operators for real vectors implemented by adoppelb
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@104 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -39,12 +39,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlendAlphaBetaCrossover.cs" />
+    <Compile Include="BlendAlphaCrossover.cs" />
+    <Compile Include="BreederGeneticAlgorithmManipulator.cs" />
     <Compile Include="ContinuousCrossover.cs" />
     <Compile Include="CompleteContinuousCrossover.cs" />
     <Compile Include="BoundsChecker.cs" />
     <Compile Include="DiscreteCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
     <Compile Include="IntermediateRecombination.cs" />
+    <Compile Include="MichalewiczNonUniformAllPositionsManipulator.cs" />
+    <Compile Include="MichalewiczNonUniformOnePositionManipulator.cs" />
     <Compile Include="RandomConvexCrossover.cs" />
     <Compile Include="LocalCrossover.cs" />
     <Compile Include="DiscreteRecombination.cs" />
