Added SelfAdaptiveIntermediateRecombination (closes ticket #83)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@105 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -54,6 +54,7 @@
     <Compile Include="LocalCrossover.cs" />
     <Compile Include="DiscreteRecombination.cs" />
     <Compile Include="SelfAdaptiveDiscreteRecombination.cs" />
+    <Compile Include="SelfAdaptiveIntermediateRecombination.cs" />
     <Compile Include="SelfAdaptiveNormalAllPositionsManipulator.cs" />
     <Compile Include="UniformAllPositionsManipulator.cs" />
     <Compile Include="UniformRandomRealVectorGenerator.cs" />
