Closed ticket #90 - added base class MultiCrossoverBase for crossover operators crossing more than two parents
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@108 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Evolutionary/HeuristicLab.Evolutionary.csproj
+++ b/sources/HeuristicLab.Evolutionary/HeuristicLab.Evolutionary.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultiCrossoverBase.cs" />
     <Compile Include="SASEGASAReunificator.cs" />
     <Compile Include="CrossoverBase.cs" />
     <Compile Include="HeuristicLabEvolutionaryPlugin.cs" />
