--- a/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
+++ b/sources/HeuristicLab.RealVector/HeuristicLab.RealVector.csproj
@@ -46,15 +46,17 @@
     <Compile Include="CompleteContinuousCrossover.cs" />
     <Compile Include="BoundsChecker.cs" />
     <Compile Include="DiscreteCrossover.cs" />
+    <Compile Include="DiscreteMultiCrossover.cs" />
     <Compile Include="HeuristicCrossover.cs" />
-    <Compile Include="IntermediateRecombination.cs" />
+    <Compile Include="IntermediateMultiCrossover.cs" />
     <Compile Include="MichalewiczNonUniformAllPositionsManipulator.cs" />
     <Compile Include="MichalewiczNonUniformOnePositionManipulator.cs" />
     <Compile Include="RandomConvexCrossover.cs" />
     <Compile Include="LocalCrossover.cs" />
-    <Compile Include="DiscreteRecombination.cs" />
-    <Compile Include="SelfAdaptiveDiscreteRecombination.cs" />
-    <Compile Include="SelfAdaptiveIntermediateRecombination.cs" />
+    <Compile Include="RealVectorMultiCrossoverBase.cs" />
+    <Compile Include="RealVectorSelfAdaptiveMultiCrossoverBase.cs" />
+    <Compile Include="SelfAdaptiveDiscreteMultiCrossover.cs" />
+    <Compile Include="SelfAdaptiveIntermediateMultiCrossover.cs" />
     <Compile Include="SelfAdaptiveNormalAllPositionsManipulator.cs" />
     <Compile Include="UniformAllPositionsManipulator.cs" />
     <Compile Include="UniformRandomRealVectorGenerator.cs" />
