* created abstract base class for GP evaluators  * created a version of MSEEvaluator that implements an early stopping criterion (to be combined with offspring selection) (ticket #29)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@128 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -48,9 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Evaluation\CoefficientOfDeterminationEvaluator.cs" />
-    <Compile Include="Evaluation\FunctionEvaluator.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Evaluation\GPEvaluatorBase.cs" />
+    <Compile Include="Evaluation\EarlyStoppingMeanSquaredErrorEvaluator.cs" />
     <Compile Include="Evaluation\MeanSquaredErrorEvaluator.cs" />
     <Compile Include="Evaluation\VarianceAccountedForEvaluator.cs" />
     <Compile Include="GPOperatorGroup.cs" />
