added matthews correlation coefficient evaluator for classification problems (ticket #69)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@169 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
+++ b/sources/HeuristicLab.StructureIdentification/HeuristicLab.StructureIdentification.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Evaluation\CoefficientOfDeterminationEvaluator.cs" />
+    <Compile Include="Evaluation\MCCEvaluator.cs" />
     <Compile Include="Evaluation\GPEvaluatorBase.cs" />
     <Compile Include="Evaluation\EarlyStoppingMeanSquaredErrorEvaluator.cs" />
     <Compile Include="Evaluation\MeanSquaredErrorEvaluator.cs" />
