fixed #114 (code-cleanup)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@185 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GreaterThan.cs" />
     <Compile Include="FunctionTree.cs" />
     <Compile Include="IFunctionTree.cs" />
+    <Compile Include="ModelAnalyzerExporter.cs" />
     <Compile Include="ProgrammableFunction.cs" />
     <Compile Include="Equal.cs" />
     <Compile Include="FunctionView.cs">
