Added ItemDictionary and related classes (View, KeyValueEventArgs, EditKeyValueDialog) to the Core and Data projects as per Andreas' request.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@187 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
+++ b/sources/HeuristicLab.Core/HeuristicLab.Core.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>ChooseTypeDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="AliasEventArgs.cs" />
+    <Compile Include="KeyValueEventArgs.cs" />
     <Compile Include="OperatorBaseDescriptionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
