--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -111,6 +111,19 @@
     <Compile Include="ConstrainedDoubleDataView.Designer.cs">
       <DependentUpon>ConstrainedDoubleDataView.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditKeyValueDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditKeyValueDialog.designer.cs">
+      <DependentUpon>EditKeyValueDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ItemDictionaryView_T.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ItemDictionaryView_T.designer.cs">
+      <DependentUpon>ItemDictionaryView_T.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ItemDictionary_T.cs" />
     <Compile Include="NullData.cs" />
     <Compile Include="IntMatrixDataView.cs">
       <SubType>UserControl</SubType>
@@ -225,9 +238,15 @@
       <DependentUpon>DoubleDataView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="EditKeyValueDialog.resx">
+      <DependentUpon>EditKeyValueDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="IntDataView.resx">
       <DependentUpon>IntDataView.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemDictionaryView_T.resx">
+      <DependentUpon>ItemDictionaryView_T.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ItemListView_T.resx">
       <DependentUpon>ItemListView_T.cs</DependentUpon>
