--- a/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
+++ b/sources/HeuristicLab.Data/HeuristicLab.Data.csproj
@@ -240,6 +240,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditKeyValueDialog.resx">
       <DependentUpon>EditKeyValueDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="IntDataView.resx">
       <DependentUpon>IntDataView.cs</DependentUpon>
@@ -247,6 +248,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ItemDictionaryView_T.resx">
       <DependentUpon>ItemDictionaryView_T.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ItemListView_T.resx">
       <DependentUpon>ItemListView_T.cs</DependentUpon>
