--- a/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
+++ b/sources/HeuristicLab.SQLite/HeuristicLab.SQLite.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+      <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
+      <Name>HeuristicLab.PluginInfrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
