* extracted communication code out of the DistributedEngine into class JobManager  * implemented a method to retrieve the JobState for a given job (specified by it's guid) in GridServer  * implemented restarting of jobs in JobManager  * improved exception handling in JobManager and DistributedEngine
(ticket #136)

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@219 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
+++ b/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabDistributedEnginePlugin.cs" />
+    <Compile Include="JobManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DistributedEngine.cs" />
     <Compile Include="DistributedEngineEditor.cs">
