--- a/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
+++ b/sources/HeuristicLab.DataAnalysis/HeuristicLab.DataAnalysis.csproj
@@ -59,9 +59,13 @@
       <DependentUpon>DatasetView.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabDataAnalysisPlugin.cs" />
+    <Compile Include="IDatasetManipulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regression.cs" />
     <Compile Include="Statistics.cs" />
+    <Compile Include="SvmExporter.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
@@ -84,6 +88,10 @@
   <ItemGroup>
     <EmbeddedResource Include="DatasetView.resx">
       <DependentUpon>DatasetView.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SvmExporter.resx">
+      <DependentUpon>SvmExporter.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
