fixed #146 (serialization of function-trees in linear form)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@260 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
+++ b/sources/HeuristicLab.Functions/HeuristicLab.Functions.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Substraction.cs" />
     <Compile Include="Power.cs" />
     <Compile Include="Division.cs" />
+    <Compile Include="SymbolTable.cs" />
     <Compile Include="Tangens.cs" />
     <Compile Include="Cosinus.cs" />
     <Compile Include="Sinus.cs" />
