--- a/sources/HeuristicLab.Logging/HeuristicLab.Logging.csproj
+++ b/sources/HeuristicLab.Logging/HeuristicLab.Logging.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Linechart.cs" />
     <Compile Include="HeuristicLabLoggingPlugin.cs" />
     <Compile Include="LinechartView.cs">
