--- a/sources/HeuristicLab.TestFunctions/HeuristicLab.TestFunctions.csproj
+++ b/sources/HeuristicLab.TestFunctions/HeuristicLab.TestFunctions.csproj
@@ -42,13 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AckleyEvaluator.cs" />
+    <Compile Include="BealeEvaluator.cs" />
+    <Compile Include="BoothEvaluator.cs" />
     <Compile Include="GriewangkEvaluator.cs" />
+    <Compile Include="LevyEvaluator.cs" />
+    <Compile Include="MatyasEvaluator.cs" />
     <Compile Include="SchwefelEvaluator.cs" />
     <Compile Include="RosenbrockEvaluator.cs" />
     <Compile Include="RastriginEvaluator.cs" />
     <Compile Include="SphereEvaluator.cs" />
     <Compile Include="HeuristicLabTestFunctionsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SumSquaresEvaluator.cs" />
     <Compile Include="TestFunctionEvaluatorBase.cs" />
     <Compile Include="TestFunctionInjector.cs" />
     <Compile Include="TestFunctionInjectorView.cs">
@@ -57,6 +62,7 @@
     <Compile Include="TestFunctionInjectorView.Designer.cs">
       <DependentUpon>TestFunctionInjectorView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ZakharovEvaluator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
